WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60838
[Gtk] plugins/get-url-notify-with-url-that-fails-to-load.html crashes on buildbot
https://bugs.webkit.org/show_bug.cgi?id=60838
Summary
[Gtk] plugins/get-url-notify-with-url-that-fails-to-load.html crashes on buil...
Anders Carlsson
Reported
2011-05-14 09:25:25 PDT
[Gtk] plugins/get-url-notify-with-url-that-fails-to-load.html crashes on buildbot
Attachments
Patch
(3.34 KB, patch)
2011-05-15 08:54 PDT
,
Robert Hogan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Robert Hogan
Comment 1
2011-05-15 08:54:50 PDT
Created
attachment 93581
[details]
Patch
WebKit Commit Bot
Comment 2
2011-05-16 15:05:42 PDT
Comment on
attachment 93581
[details]
Patch Clearing flags on attachment: 93581 Committed
r86611
: <
http://trac.webkit.org/changeset/86611
>
WebKit Commit Bot
Comment 3
2011-05-16 15:05:46 PDT
All reviewed patches have been landed. Closing bug.
Csaba Osztrogonác
Comment 4
2011-05-17 00:00:24 PDT
It fails on qt-mac too. :( Could you skip it? rs=me
Robert Hogan
Comment 5
2011-05-17 15:01:05 PDT
Committed
r86709
: <
http://trac.webkit.org/changeset/86709
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug