2011-05-16  Robert Hogan  <robert@webkit.org>

Reviewed by Anders Carlsson.

        [Gtk] plugins/get-url-notify-with-url-that-fails-to-load.html crashes on buildbot

        https://bugs.webkit.org/show_bug.cgi?id=60838

        * platform/gtk/Skipped:
        * platform/qt/Skipped:
2011-05-16  Robert Hogan  <robert@webkit.org>

        Reviewed by Anders Carlsson.

        [Gtk] plugins/get-url-notify-with-url-that-fails-to-load.html crashes on buildbot

        https://bugs.webkit.org/show_bug.cgi?id=60838

        The unix test plugin needs to call the test's NPP_URLNotify
        rather than the browsers.

        * DumpRenderTree/unix/TestNetscapePlugin/TestNetscapePlugin.cpp:
        (webkit_test_plugin_url_notify):

Canonical link: https://commits.webkit.org/76261@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86611 268f45cc-cd09-0410-ab3c-d52691b4dbfc